<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        tools:ignore="MissingConstraints">

    </LinearLayout>

    <!--    <EditText-->
    <!--        android:id="@+id/editTextSubjectName"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:hint="edit"-->
    <!--        tools:ignore="MissingConstraints" />-->

<!--    <EditText-->
<!--        android:id="@+id/editSubjectID"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:hint="edit subject id"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/editStartTime"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/linearLayout"-->
<!--        app:layout_constraintVertical_bias="0.469"-->
<!--        tools:ignore="MissingConstraints"-->
<!--        tools:layout_editor_absoluteX="0dp" />-->


    <EditText
        android:id="@+id/editSubjectName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="edit subject id"
        app:layout_constraintBottom_toTopOf="@+id/editStartTime"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.552"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/editTeacherID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:hint="editTeacherID"
        app:layout_constraintBottom_toTopOf="@+id/editEndTime"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.13"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/editStudentID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="editStudentID"
        app:layout_constraintBottom_toBottomOf="@+id/editTeacherID"
        app:layout_constraintTop_toTopOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.437"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/editEndTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="edit en time"
        app:layout_constraintBottom_toTopOf="@+id/editStartTime"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.952"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/editDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="edit Date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editStartTime"
        app:layout_constraintVertical_bias="0.262"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="48dp" />

    <EditText
        android:id="@+id/editStartTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        android:hint="edit start time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="264dp"
        android:text="End Time -Start Time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="63dp"
        android:layout_height="22dp"
        android:text="Date"
        app:layout_constraintBottom_toTopOf="@+id/editDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editStartTime"
        app:layout_constraintVertical_bias="0.873" />


</androidx.constraintlayout.widget.ConstraintLayout>